--- a/caliber/src/main/webapp/static/app/partials/paneldemo/samplemodal.html
+++ b/caliber/src/main/webapp/static/app/partials/paneldemo/samplemodal.html
@@ -3,31 +3,34 @@
 		<div class="modal-dialog modal-lg">
 			<div class="modal-content">
 				<div class="modal-header">
- 					<div style="float:left;width:50%"><br><br><h4 class="modal-title" id="panelFeedbackModal">Panel Interview Feedback Form</h4></div>
- 					<div style="float:right;width:50%"><img class="img-responsive" src="/static/app/resources/images/rev-brand.png" alt="revature" height="175" width="175" align="right"/></div>
+					<button type="button" class="close" data-dismiss="modal"
+						aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+ 					<div style="float:left;"><h4 class="modal-title" id="panelFeedbackModal">Panel Interview Feedback Form</h4></div>
  				</div>
 				<div class="modal-body">
+				<div class="row">
+					<div class="col-xs-6">
 					<div class="panel panel-default">
 						<div class="panel-heading">Interview Details</div>
 						<div class="panel-body">
-							<div class="form-group col-md-6">
-								<b>Name of the Associate</b> <input type="text" class="form-control" ng-init="associate.firstName + ' ' + associate.lastName" disabled /><br> 
-								<b>Panelist Name</b> <input type="text" class="form-control" placeholder="Firstname Lastname" ng-bind="panelist.firstName + ' ' + panelist.lastName" /><br> 
-								<b>Training Track</b> <input type="text" class="form-control" ng-bind="trainee.trainingTrack" /><br> 
-								<b>Panel Round</b> <input type="number" class="form-control" placeholder="Select a value between 1 - 10"  min="1" max="10" ng-bind="panelInterview.round" required /><br> 
-								<b>Recording Consent</b> <input type="number" class="form-control" placeholder="Select a value between 0 - 1"  min="0" max="1" ng-bind="interviewPanel.consent" /><br> 
-								<b>Recording Link</b> <input type="text" class="form-control" ng-bind="panelInterview.link" /><br>
+							<div class="form-group col-xs-5">
+								<b>Associate Name</b> <input type="text" class="form-control" ng-value="trainee.name" disabled /> 
+								<b>Panelist Name</b> <input type="text" class="form-control"  ng-value="panelist.name"  disabled />
+								<b>Training Track</b> <input type="text" class="form-control" ng-value="trainee.trainingTrack" disabled /> 
+								<b>Panel Round</b> <input type="number" class="form-control" placeholder="Select 1 - 10"  min="1" max="10" ng-bind="panelInterview.round" required /> 
+								<b>Recording Consent</b> <input type="number" class="form-control" placeholder="Select 0 - 1"  min="0" max="1" ng-bind="interviewPanel.consent" /> 
 							</div>
-							<div class="form-group col-md-6">
+							<div class="form-group col-xs-6">
 								<b>Interview Date</b> <div class="input-group">
 													  <input class="date-input form-control date-selector" name="i"
 													  min="0" placeholder="Interview Date" 
-													  moment-picker="interviewDate.model" format="YYYY-MM-DD"
+													  moment-picker="interviewDate.model" format="YYYY-MMM-DD"
 													  ng-model="interviewDate.model"
 													  ng-model-options="{ updateOn: 'blur' }" ng-required="true">
 													  <i class="input-group-addon glyphicon glyphicon-calendar"></i>
 													  </div>
-													  <br>
 								<b>Interview Time</b> <div class="input-group">
 													  <input class="date-input form-control time-selector" name="t"
 													  min="0" placeholder="Interview Time" 
@@ -36,41 +39,14 @@
 													  ng-model-options="{ updateOn: 'blur' }" ng-required="true">
 													  <i class="input-group-addon glyphicon glyphicon-time"></i>
 													  </div>
-													  <br>
-								<b>Interview Duration</b> <input type="text" class="form-control" ng-bind="panelInterview.duration" /><br> 
-								<b>Interview Model</b> <input type="text" class="form-control" ng-bind="panelInterview.mode" /><br> 
-								<b>Overall Feedback</b> <input type="text" class="form-control" placeholder="Overall Feedback" ng-bind="panelInterview.overall" /><br> 
-								<b>Internet Connectivity</b> <input type="text" class="form-control" ng-bind="panelInterview.connectivity" /><br>
+								<b>Interview Duration</b> <input type="text" class="form-control" ng-bind="panelInterview.duration" />
+								<b>Interview Model</b> <input type="text" class="form-control" ng-bind="panelInterview.mode" /> 
+								<b>Internet Connectivity</b> <input type="text" class="form-control" ng-bind="panelInterview.connectivity" />
 							</div>
 						</div>
 					</div>
-					<div class="panel panel-default">
-						<div class="panel-heading">Technical Feedback</div>
-						<div class="panel-body">
-							<table id="technicalFeedback" class="table table=responsive">
-                        		<tr>
-                            		<th> Technology </th>
-                            		<th> Result </th>
-                            		<th> Repanel </th>
-                            		<th> Comment </th>
-                        		</tr>
-                        		<tr class="form-group">
-                        			<!-- this needs to be a select input type -->
-                            		<td><select ng-model="" class="form-control" id="technicalFeedback.technology">
-                            			<option ng-repeat="">{{}}</option>
-                            		</select></td>
-                            		<!-- this needs to be a select input type -->
-                            		<td><select ng-model="" class="form-control" id="technicalFeedback.result">
-                            			<option ng-repeat="">{{}}</option>
-                            		</select></td>
-                            		<td><input type="checkbox" style="float:bottom;" class="faChkSqr" id="technicalFeedback.repanel"></td>
-                            		<td><input type="text" class="form-control" id="technicalFeedback.comment"></td>
-                        		</tr>
-                    		</table>
-                    		<div class="pull-left" ng-click=""><span class="glyphicon glyphicon-plus" style="color: #F26925;" aria-hidden="true"></span></div>
-                    		<div class="pull-right" ng-click=""><span class="glyphicon glyphicon-remove" style="color: #F26925;" aria-hidden="true"></span></div>
-						</div>
 					</div>
+					<div class="col-xs-6">
 					<div class="panel panel-default">
 						<div class="panel-heading">General Feedback</div>
 						<div class="panel-body">
@@ -99,16 +75,62 @@
                                 	<td><b>Communication Skills</b></td>
                                 	<td><input type="text" class="form-control" id="generalFeedback.commskills"></td>
                             	</tr>
-                            	<tr>
-                                	<td><b>Overall</b></td>
-                                	<td><input type="text" class="form-control" id="generalFeedback.overall"></td>
-                            	</tr>
                         	</table>
 						</div>
 					</div>
+					</div>
+					</div>
+					<div class="row">
+					<div class="col-xs-12">
+					<div class="panel panel-default">
+						<div class="panel-heading">Technical Feedback</div>
+						<div class="panel-body">
+							<table id="technicalFeedback" class="table table=responsive">
+                        		<tr>
+                            		<th> Technology </th>
+                            		<th> Result </th>
+                            		<th> Repanel </th>
+                            		<th> Comment </th>
+                        		</tr>
+                        		<tr class="form-group">
+                        			<!-- this needs to be a select input type -->
+                            		<td><select ng-model="" class="form-control" id="technicalFeedback.technology">
+                            			<option ng-repeat="">{{}}</option>
+                            		</select></td>
+                            		<!-- this needs to be a select input type -->
+                            		<td><select ng-model="" class="form-control" id="technicalFeedback.result">
+                            			<option ng-repeat="">{{}}</option>
+                            		</select></td>
+                            		<td><select ng-model="" class="form-control" id="technicalFeedback.repanel">
+                            			<option ng-repeat=""></option>
+                            			</select></td>
+                            		<td><input type="text" class="form-control" id="technicalFeedback.comment"></td>
+                            		<td><div ng-click="addRow()" ng-hide=""><span class="glyphicon glyphicon-plus" style="color: #F26925;" aria-hidden="true"></span></div></td>
+                            		<td><div ng-click="deleteRow()" ng-hide=""><span class="glyphicon glyphicon-remove" style="color: #F26925;" aria-hidden="true"></span></div></td>
+                        		</tr>
+                    		</table>
+						</div>
+					</div>
+					</div>
+					</div>
+					<div class="row">
+					<div class="col-xs-12">
+					<div class="panel panel-default">
+						<div class="panel-heading">Overall Feedback</div>
+						<div class="panel-body">
+							<b>Overall</b><input type="text" class="form-control" id="overallFeedback.overall" />
+							<b>Panel Status</b><select ng-model="" class="form-control" id="overallFeedback.panelStat">
+                            						<option ng-repeat=""></option>
+                            				   </select></td>
+                            <b>Recording Link</b> <input type="text" class="form-control" ng-bind="panelInterview.link" />
+						</div>
+					</div>
+					</div>
+					</div>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Submit</button>
+					<input type="submit" value="Save" class="btn btn-primary" data-dismiss="modal" ng-click="savePanel()">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 				</div>
 			</div>
 		</div>
