completed rest of setup for Panelist

--- a/caliber/src/main/webapp/static/app/partials/abstracts/panel.html
+++ b/caliber/src/main/webapp/static/app/partials/abstracts/panel.html
@@ -8,7 +8,10 @@
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
 			<li><a ui-sref="panel.home">Home</a></li>
-			<li><a ui-sref="panel.panel">Add Panel</a></li>
+			<li><a ui-sref="panel.manage">Manage Batch</a></li>
+			<li><a ui-sref="panel.assess">Assess Batch</a></li>
+			<li><a ui-sref="panel.panel">Panel</a></li>
+			<li><a ui-sref="panel.reports">Reports</a></li>
 		</ul>
 	</div>
 </nav>
