--- a/caliber/src/main/webapp/static/app/partials/manage/manage-batch.html
+++ b/caliber/src/main/webapp/static/app/partials/manage/manage-batch.html
@@ -85,10 +85,10 @@
 	</div>
 
 	<!-- form for updating or creating batch -->
-	<div ui-view="batch-form">batch-form</div>
+	<div ui-view="batch-form"></div>
 
 	<!-- for for importing batch -->
-	<div ui-view="import-batch">import-batch</div>
+	<div ui-view="import-batch"></div>
 
 	<!-- confirm and invalid input modals for batch -->
 	<div ui-view="batch-extra-modals"></div>
