--- a/caliber/src/main/webapp/static/app/partials/home/qc-home.html
+++ b/caliber/src/main/webapp/static/app/partials/home/qc-home.html
@@ -20,7 +20,7 @@
 					<div class="panel-heading">Last Quality Audit
 						<select class="pull-right" ng-model="selectedBarCity" ng-if="selectedBarState.address.state"
 						ng-change="onBarCharAddressCityChange(selectedBarCity.address.city)"
-							ng-options="batch.address.city for batch in auditData |filter:selectedBarState.address.state | filter:{address:{$:''}} | unique:'address.city' ">
+							ng-options="batch.address.city for batch in auditData |filter:selectedBarState.address.state:true | filter:{address:{$:''}} | unique:'address.city' ">
 							<option value="">All Cities</option>
 						</select>
 						<select class="pull-right" ng-model="selectedBarState" 
