--- a/caliber/src/main/webapp/static/app/partials/home/vp-home.html
+++ b/caliber/src/main/webapp/static/app/partials/home/vp-home.html
@@ -74,7 +74,7 @@
 
 						<select class="pull-right" ng-model="selectedLineCity" ng-if="selectedLineState.address.state"
 						ng-change="onLineCharAddressCityChange(selectedLineCity.address.city)"
-							ng-options="batch.address.city for batch in averageScoreData |filter:selectedLineState.address.state | filter:{address:{$:''}} | unique:'address.city' ">
+							ng-options="batch.address.city for batch in averageScoreData |filter:selectedLineState.address.state:true | filter:{address:{$:''}} | unique:'address.city' ">
 							<option value="">All Cities</option>
 						</select>
 
