Changed Rajesh and Raghavan's role to ROLE_PANEL and added Stanely Medikonda as ROLE_STAGING

--- a/caliber/src/main/webapp/static/app/resources/css/app.css
+++ b/caliber/src/main/webapp/static/app/resources/css/app.css
@@ -434,6 +434,9 @@ footer a, footer a:hover {
 .add-margin{
 	margin-bottom: 10px;
 }
+.add-space{
+	margin-bottom: 5px;
+}
 /********************************************************
 	Overall Batch Status column in vp-home and qc-home
 *********************************************************/
