searchby back-end -q ' '

--- a/caliber/src/main/webapp/static/app/partials/abstracts/panel.html
+++ b/caliber/src/main/webapp/static/app/partials/abstracts/panel.html
@@ -10,6 +10,7 @@
 			<li><a ui-sref="panel.home">Home</a></li>
 			<li><a ui-sref="panel.manage">Manage Batch</a></li>
 			<li><a ui-sref="panel.assess">Assess Batch</a></li>
+			<li><a ui-sref="panel.audit">Quality Audit</a></li>
 			<li><a ui-sref="panel.panel">Panel</a></li>
 			<li><a ui-sref="panel.reports">Reports</a></li>
 		</ul>
