--- a/caliber/src/main/webapp/static/app/partials/paneldemo/paneldemo.html
+++ b/caliber/src/main/webapp/static/app/partials/paneldemo/paneldemo.html
@@ -4,9 +4,9 @@
 			<div class="col-md-12 col-lg-12">
 				<ul class="nav nav-tabs">
 					
-					<!-- Button Trigger for Create Batch Modal -->
+					<!-- Button Trigger for Create Panel Modal -->
 					<li role="button" class="pull-right" data-toggle="modal"
-						data-target="#samplemodal" ng-click="resetBatchForm()"><a>Create
+						data-target="#samplemodal" ng-click="resetPanelForm()"><a>Create
 							Panel<span class="glyphicon glyphicon-plus" aria-hidden="true">
 						</span>
 					</a></li>
