--- a/caliber/src/main/webapp/static/app/partials/paneldemo/paneldemo.html
+++ b/caliber/src/main/webapp/static/app/partials/paneldemo/paneldemo.html
@@ -13,7 +13,7 @@
 					<!-- Button Trigger for Import Batch Modal -->
 					<li class="pull-right">
 						<div class="container-1">
-							<form ng-submit="selectChosenTrainee()">
+							<form ng-submit="selectChosenTrainee(chosenTrainee)">
 								<span class="icon">
 									<button type="submit" class="SearchButton">
 										<i class="fa fa-search"></i>
@@ -22,8 +22,8 @@
 									type="search" id="searchTextBox"
 									placeholder="Search for Trainee" class="form-control SearchPad"
 									autocomplete="off" />
-								<datalist id="traineeList">
-									<option ng-repeat="trainee in allTrainees track by $index"
+								<datalist id="traineeList" ng-model="selectedId">
+									<option ng-repeat="trainee in employedTrainees"
 										ng-value="trainee.name">
 	    								{{trainee.name}} | {{trainee.email}} | {{trainee.skypeId}} 
 	    							</option>
