fixed more stuff

--- a/caliber/src/main/webapp/static/app/partials/paneldemo/samplemodal.html
+++ b/caliber/src/main/webapp/static/app/partials/paneldemo/samplemodal.html
@@ -93,7 +93,7 @@
                         		</tr>
                         		<tr class="form-group">
                             		<td><select ng-model="" class="form-control" id="technicalFeedback.technology">
-                            			<option ng-repeat="option in technologies">{{option}}</option>
+                            			<option ng-repeat="option in technologies">{{option.skillCategory}}</option>
                             		</select></td>
                             		<!-- this needs to be a select input type -->
                             		<td><select ng-model="" class="form-control" id="technicalFeedback.result">
