--- a/caliber/src/main/webapp/static/app/partials/paneldemo/samplemodal.html
+++ b/caliber/src/main/webapp/static/app/partials/paneldemo/samplemodal.html
@@ -91,19 +91,21 @@
                             		<th> Repanel </th>
                             		<th> Comment </th>
                         		</tr>
+                        		<tr class="form-group" ng-repeat="techs in techFeedback track by techs.id">
+                            		<td>{{techs.tech}}</td>
+                            		<td>{{techs.result}}</td>
+                            		<td>{{techs.repanel}}</td>
+                            		<td>{{techs.comment}}</td>
+                            		<td><button type="submit" ng-click="deleteRow(techs.count)" style="background:transparent;border:transparent"><span class="glyphicon glyphicon-remove" style="color: #F26925;" aria-hidden="true"></span></div></td>
+                        		</tr>
                         		<tr class="form-group">
-                            		<td><select ng-model="technologies.model" class="form-control" id="technicalFeedback.technology">
+                        			<td><select ng-model="technologies.model" class="form-control" id="technicalFeedback.technology">
                             			<option ng-repeat="option in technologies.options">{{option.skillCategory}}</option>
                             		</select></td>
-                            		<td><select ng-model="panelResult.model" class="form-control" id="technicalFeedback.result">
-                            			<option ng-repeat="option in panelResult.options">{{option}}</option>
-                            		</select></td>
-                            		<td><select ng-model="repanel.model" class="form-control" id="technicalFeedback.repanel">
-                            			<option ng-repeat="option in repanel.options">{{option}}</option>
-                            			</select></td>
-                            		<td><input type="text" class="form-control" id="technicalFeedback.comment"></td>
-                            		<td><div ng-click="addRow()" ng-show="counter==lastrow"><span class="glyphicon glyphicon-plus" style="color: #F26925;" aria-hidden="true"></span></div></td>
-                            		<td><div ng-click="deleteRow()" ng-hide="counter==1"><span class="glyphicon glyphicon-remove" style="color: #F26925;" aria-hidden="true"></span></div></td>
+                            		<td><select ng-model="panelResult.model" class="form-control" id="technicalFeedback.result"><option ng-repeat="option in panelResult.options">{{option}}</option></select></td>
+                            		<td><select ng-model="repanel.model" class="form-control" id="technicalFeedback.repanel"><option ng-repeat="option in repanel.options">{{option}}</option></select></td>
+                            		<td><input type="text" class="form-control" id="technicalFeedback.comment" ng-model="techComment.model"></td>
+                            		<td><button type="submit" ng-click="addRow()" style="background:transparent;border:transparent"><span class="glyphicon glyphicon-plus" style="color: #F26925;" aria-hidden="true"></span></div></td>
                         		</tr>
                     		</table>
 						</div>
