--- a/caliber/src/main/webapp/static/app/partials/paneldemo/samplemodal.html
+++ b/caliber/src/main/webapp/static/app/partials/paneldemo/samplemodal.html
@@ -15,10 +15,10 @@
 					<div class="panel panel-default">
 						<div class="panel-heading">Interview Details</div>
 						<div class="panel-body">
-							<div class="form-group col-xs-5">
-								<b>Associate Name</b> <input type="text" class="form-control" ng-value="trainee.name" disabled /> 
-								<b>Panelist Name</b> <input type="text" class="form-control" ng-value="panelist.name"  disabled />
-								<b>Training Track</b> <input type="text" class="form-control" ng-value="trainee.trainingTrack" disabled /> 
+							<div class="form-group col-xs-6">
+								<b>Associate Name</b> <input type="text" class="form-control" ng-model="trainee.name" disabled /> 
+								<b>Panelist Name</b> <input type="text" class="form-control" ng-model="panelist.name"  disabled />
+								<b>Training Track</b> <input type="text" class="form-control" ng-model="batchSkillType" disabled /> 
 								<b>Panel Round</b> <input type="number" class="form-control" ng-model="panelRound.model" placeholder="Select 1 - 10"  min="1" max="10" ng-bind="panelInterview.round" required /> 
 								<b>Recording Consent</b> <select ng-model="recordingConsent.model" class="form-control" id="recordConsent"><option ng-repeat="option in recordingConsent.options">{{option}}</option></select>
 							</div>
@@ -117,14 +117,24 @@
 					<div class="panel panel-default">
 						<div class="panel-heading">Overall Feedback</div>
 						<div class="panel-body">
-							<b>Overall</b><input type="text" class="form-control" ng-model="overallPanel.model" id="overallFeedback.overall" />
-							<b>Panel Status</b><select ng-model="overallStatus.model" class="form-control" id="overallFeedback.panelStatus">
-                            						<option ng-repeat="option in overallStatus.options">{{option}}</option>
-                            				   </select></td>
-                            <b>Recording Link</b> <input type="text" class="form-control" ng-model="recordingLink.model" ng-bind="panelInterview.link" />
-                            <b>Interview Duration</b> <input type="text" class="form-control" ng-model="interviewDuration.model" ng-bind="panelInterview.duration" />
+							<div class="row">
+								<div class="form-group col-xs-2">
+                            		<b>Interview Duration</b> <input type="text" class="form-control" ng-model="interviewDuration.model" ng-bind="panelInterview.duration" />
+                            	</div>
+                            	<div class="form-group col-xs-10">
+                            		<b>Recording Link</b> <input type="text" class="form-control" ng-model="recordingLink.model" ng-bind="panelInterview.link" />
+                            	</div>
+                            </div>
+                            <div class="row">
+                            	<div class="form-group col-xs-2"><b>Panel Status</b><select ng-model="overallStatus.model" class="form-control" id="overallFeedback.panelStatus">
+                            															<option ng-repeat="option in overallStatus.options">{{option}}</option>
+                            				   										</select></td>
+                            	</div>
+                            	<div class="form-group col-xs-10">
+                            		<b>Overall</b><input type="text" class="form-control" ng-model="overallPanel.model" id="overallFeedback.overall" />
+                            	</div>
+							</div>
 						</div>
-					</div>
 					</div>
 					</div>
 				</div>
