sooo close to saving panels!

--- a/caliber/src/main/webapp/static/app/partials/paneldemo/paneldemo.html
+++ b/caliber/src/main/webapp/static/app/partials/paneldemo/paneldemo.html
@@ -6,7 +6,7 @@
 
 					<!-- Button Trigger for Create Panel Modal -->
 					<li role="button" class="pull-right" data-toggle="modal"
-						data-target="#samplemodal" ng-click="resetPanelForm()"><a>Create
+						data-target="#samplemodal" ng-click=""><a>Create
 							Panel<span class="glyphicon glyphicon-plus" aria-hidden="true">
 						</span>
 					</a></li>
@@ -32,8 +32,7 @@
 						</div>
 					</li>
 				</ul>
-
-
+				
 
 				<div class="panel panel-default" style="margin-top: 20px">
 					<div class="panel-heading">Panel Feedback</div>
