--- a/caliber/src/main/webapp/static/app/partials/panel-report-display.html
+++ b/caliber/src/main/webapp/static/app/partials/panel-report-display.html
@@ -6,17 +6,14 @@
 					Panel Interview Feedback
 					<!-- Buttons for our panel report -->
 					<i ng-click="incrementPanel()">
-						<div style="display: inline"
-							ng-if="panelIndex < traineePanelData.length-1">
-							<i
-								class="clickableIcons glyphicon glyphicon-chevron-right pull-right move-glyphicon"></i>
+						<div style="display:inline" ng-if="panelIndex < traineePanelData.length-1">
+							<i class="clickableIcons glyphicon glyphicon-chevron-right pull-right move-glyphicon"></i>
 						</div>
-					</i> <span class="pull-right">Round <span
-						ng-bind="traineePanelData[panelIndex].panelRound"></span></span> <i
-						ng-click="decrementPanel()">
-						<div style="display: inline" ng-if="panelIndex > 0">
-							<i
-								class="clickableIcons glyphicon glyphicon-chevron-left pull-right move-glyphicon"></i>
+					</i> 
+					<span class="pull-right">Round <span ng-bind="traineePanelData[panelIndex].panelRound"></span></span> 
+					<i ng-click="decrementPanel()">
+						<div style="display:inline" ng-if="panelIndex > 0">
+							<i class="clickableIcons glyphicon glyphicon-chevron-left pull-right move-glyphicon"></i>
 						</div>
 					</i>
 					<!-- Buttons for our panel report -->
@@ -37,12 +34,6 @@
 								<div class="col-4 col-sm-6 add-space">
 									<span ng-bind="traineePanelData[panelIndex].panelist.name"></span>
 								</div>
-								<!-- 									<div class="col-8 col-sm-6"> -->
-								<!-- 										<strong>Training Track:</strong> -->
-								<!-- 									</div> -->
-								<!-- 									<div class="col-4 col-sm-6"> -->
-								<!-- 										<span ng-bind="traineePanelData[panelIndex].trainee.track"></span> -->
-								<!-- 									</div> -->
 								<div class="col-8 col-sm-6 add-space">
 									<strong> Panel Round</strong>
 								</div>
@@ -62,7 +53,6 @@
 								<div class="col-4 col-sm-6 add-space">
 									<span ng-bind="traineePanelData[panelIndex].recordingLink"></span>
 								</div>
-								<br>
 							</div>
 						</div>
 
@@ -75,12 +65,6 @@
 									<div class="col-4 col-sm-6 add-space">
 										<span ng-bind="traineePanelData[panelIndex].interviewDate"></span>
 									</div>
-									<!-- 										<div class="col-8 col-sm-6"> -->
-									<!-- 											<strong>Interview Time:</strong> -->
-									<!-- 										</div> -->
-									<!-- 										<div class="col-4 col-sm-6"> -->
-									<!-- 											<span ng-bind="traineePanelData[panelIndex].interviewTime"></span> -->
-									<!-- 										</div> -->
 									<div class="col-8 col-sm-6 add-space">
 										<strong>Interview Duration</strong>
 									</div>
