--- a/caliber/src/main/webapp/static/app/partials/paneldemo/samplemodal.html
+++ b/caliber/src/main/webapp/static/app/partials/paneldemo/samplemodal.html
@@ -90,12 +90,12 @@
                             		<th> Repanel </th>
                             		<th> Comment </th>
                         		</tr>
-                        		<tr class="form-group" ng-repeat="techs in techFeedback track by techs.id">
+                        		<tr class="form-group" ng-repeat="techs in techFeedback track by $index">
                             		<td>{{techs.technology}}</td>
                             		<td>{{techs.result}}</td>
                             		<td>{{techs.status}}</td>
                             		<td>{{techs.comment}}</td>
-                            		<td><button type="submit" ng-click="deleteRow(techs.count)" style="background:transparent;border:transparent"><span class="glyphicon glyphicon-remove" style="color: #F26925;" aria-hidden="true"></span></div></td>
+                            		<td><button type="submit" ng-click="deleteRow($index)" style="background:transparent;border:transparent"><span class="glyphicon glyphicon-remove" style="color: #F26925;" aria-hidden="true"></span></div></td>
                         		</tr>
                         		<tr class="form-group">
                         			<td><select ng-model="technologies.model" class="form-control" id="technicalFeedback.technology">
