--- a/caliber/src/main/webapp/static/app/partials/paneldemo/samplemodal.html
+++ b/caliber/src/main/webapp/static/app/partials/paneldemo/samplemodal.html
@@ -3,8 +3,7 @@
 		<div class="modal-dialog modal-lg">
 			<div class="modal-content">
 				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal"
-						aria-label="Close">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
  					<div style="float:left;"><h4 class="modal-title" id="panelFeedbackModal">Panel Interview Feedback Form</h4></div>
@@ -19,7 +18,7 @@
 								<b>Associate Name</b> <input type="text" class="form-control" ng-model="trainee.name" disabled /> 
 								<b>Training Track</b> <input type="text" class="form-control" ng-model="batchSkillType" disabled />
 								<b>Panel Round</b> <input type="number" class="form-control" ng-model="panelRound.model" placeholder="Select 1 - 10"  min="1" max="10" ng-bind="panelInterview.round" required /> 
-								<b>Recording Consent</b> <select ng-model="recordingConsent.model" class="form-control" id="recordConsent"><option ng-repeat="option in recordingConsent.options">{{option}}</option></select>
+								<b>Recording Consent</b> <select ng-options="option as option.exp for option in recordingConsent.options track by option.value" ng-model="recordingConsent.model" class="form-control" id="recordConsent"></select>
 							</div>
 							<div class="form-group col-xs-6">
 								<b>Interview Date</b> <div class="input-group">
@@ -101,7 +100,7 @@
                         			<td><select ng-model="technologies.model" class="form-control" id="technicalFeedback.technology">
                             			<option ng-repeat="option in technologies.options">{{option.skillCategory}}</option>
                             		</select></td>
-                            		<td><select ng-model="panelResult.model" class="form-control" id="technicalFeedback.result"><option ng-repeat="option in panelResult.options">{{option}}</option></select></td>
+                            		<td><select ng-options="option as option.exp for option in panelResult.options track by option.value" ng-model="panelResult.model" class="form-control" id="technicalFeedback.result"></select></td>
                             		<td><select ng-model="repanel.model" class="form-control" id="technicalFeedback.repanel"><option ng-repeat="option in repanel.options">{{option}}</option></select></td>
                             		<td><input type="text" class="form-control" id="technicalFeedback.comment" ng-model="techComment.model"></td>
                             		<td><button type="submit" ng-click="addRow()" style="background:transparent;border:transparent"><span class="glyphicon glyphicon-plus" style="color: #F26925;" aria-hidden="true"></span></div></td>
